syntax = "proto3";

option go_package = "github.com/beam-cloud/beam/proto";

package cache;

service Cache {
  rpc GetContent(GetContentRequest) returns (GetContentResponse) {}
  rpc StoreContent(stream StoreContentRequest) returns (StoreContentResponse) {}
}

message GetContentRequest {
  string hash = 1;  // Hash of the content to retrieve
  int64 offset = 2; // Offset into the content
  int64 length = 3; // Length of the content to retrieve
}

message GetContentResponse {
  bytes content = 1; // Content data
}

message StoreContentRequest {
  bytes content = 1; // Content data to store
}

message StoreContentResponse {
  string hash = 1; // Hash of the stored content
}
